function(yenxo_target_name_for out file)
  set(_extension ".cpp")
  file(RELATIVE_PATH _relative "${yenxo_SOURCE_DIR}" "${file}")
  string(REPLACE "${_extension}" "" _name "${_relative}")
  string(REGEX REPLACE "/" "." _name "${_name}")
  set(${out} "${_name}" PARENT_SCOPE)
endfunction()

add_custom_target(examples COMMENT "Build all examples")
add_dependencies(check examples)

file(GLOB_RECURSE EXAMPLES "*.cpp")

foreach(_file in ${EXAMPLES})
  if (NOT _file MATCHES ".cpp$")
    continue()
  endif()
  yenxo_target_name_for(_target "${_file}")
  add_executable(${_target} EXCLUDE_FROM_ALL "${_file}")
  add_test(${_target} "${CMAKE_CURRENT_BINARY_DIR}/${_target}")
  target_link_libraries(${_target} PRIVATE ${PROJECT_NAME})
  target_link_libraries(${_target} PRIVATE ${PROJECT_NAME}_development)
  target_include_directories(${_target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  set_target_properties(${_target} PROPERTIES CXX_STANDARD 17)
  add_dependencies(examples ${_target})
endforeach()
